# fverb

./: .gitignore  CMakeLists.txt  Makefile  README.md  fshim.dsp  fverb.dsp
.github/workflows/: build.yml
lv2-manifests/fverb.lv2/: manifest.ttl
plugins/fshim/: DistrhoPluginInfo.h  Makefile  PluginFshim.cpp  PluginFshim.hpp
plugins/fshim/dsp/: Fshim.cpp  Fshim.hpp
plugins/fverb/: DistrhoPluginInfo.h  Makefile  PluginFverb.cpp  PluginFverb.hpp
plugins/fverb/dsp/: Fverb.cpp  Fverb.hpp
scripts/: generate.sh
sources/WDLex/: resampleMOD.cpp  resampleMOD.h
